--- a/requirements.txt
+++ b/requirements.txt
@@ -437,3 +437,16 @@ zope=1.0=py310h06a4308_1
 zope.interface=5.4.0=py310h7f8727e_0
 zstandard=0.19.0=py310h5eee18b_0
 zstd=1.5.2=ha4553b6_0
+
+numpy~=1.24.4
+torch~=2.1.0
+aspire~=0.12.0
+matplotlib~=3.7.3
+pyyaml~=6.0.1
+torchvision~=0.16.0
+pillow~=10.0.1
+scipy~=1.10.1
+scikit-image~=0.21.0
+bm3d~=4.0.1
+opencv-python~=4.8.1.78
+imageio~=2.31.6
